# aria-core

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aria/: __init__.py  cli.py  models.py  orchestrator.py
aria/agent/: __init__.py  base.py  decorators.py
aria/gates/: __init__.py  checkpoints.py
aria/ledger/: __init__.py  store.py
aria/providers/: __init__.py  anthropic.py  base.py  local.py  openai.py
aria/rollback/: __init__.py  engine.py
aria/sandbox/: __init__.py  executor.py
aria/trust/: __init__.py  tokens.py
examples/: file_agent.py  local_demo.py  multi_agent.py  research_agent.py
tests/: conftest.py  test_gates.py  test_ledger.py  test_rollback.py  test_sandbox.py  test_trust.py
