[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria-core"
version = "0.1.0"
description = "Agentic Runtime for Intelligent Autonomy — safety infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ARIA Contributors" }]
keywords = ["ai", "agents", "safety", "orchestration", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "openai>=1.0",
    "anthropic>=0.25",
    "click>=8.1",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
aria = "aria.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
